crates/squealy/tests/compile_fail/foreign_key_column_type_mismatch.stderr
error[E0277]: the trait bound `i32: squealy::SameValue<i64>` is not satisfied
 --> tests/compile_fail/foreign_key_column_type_mismatch.rs:9:35
  |
9 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ the trait `squealy::SameValue<i64>` is not implemented for `i32`
  |
note: required by a bound in `assert_foreign_key_column_type`
 --> tests/compile_fail/foreign_key_column_type_mismatch.rs:9:35
  |
9 | #[derive(Clone, Debug, PartialEq, Table)]
  |                                   ^^^^^ required by this bound in `assert_foreign_key_column_type`
  = note: this error originates in the derive macro `Table` (in Nightly builds, run with -Z macro-backtrace for more info)
